prima bozza dell'hero

--- a/index.html
+++ b/index.html
@@ -28,23 +28,93 @@
           <li>
             <a href="#">Planning</a>
           </li>
+
           <li>
             <a href="#">Testimonials</a>
           </li>
+
           <li>
             <a href="#">Features</a>
           </li>
+
           <li>
             <a href="#">About Us</a>
           </li>
+
           <li>
             <a class="button" href="#">Get Started</a>
           </li>
         </ul>
+
         <div class="nav__hamburger">
           <i class="fa-solid fa-bars"></i>
         </div>
       </nav>
     </header>
+    <!-- header/navbar -->
+    <section class="hero">
+      <div class="card card--get-a-demo container">
+        <div class="c-demo__description">
+          <h3>Get a demo application</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
+            optio labore sint eius cumque odit numquam ipsam. Nesciunt, officiis
+            ipsam.
+          </p>
+          <a class="button button--blue" href="#"
+            ><i class="fa-brands fa-apple"></i> App Store</a
+          >
+        </div>
+        <div class="c-demo__img">
+          <img src="/img/phone.png" alt="" />
+        </div>
+      </div>
+
+      <div class="card card--get-a-demo container">
+        <div class="c-demo__description">
+          <h3>Get a demo application</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
+            optio labore sint eius cumque odit numquam ipsam. Nesciunt, officiis
+            ipsam.
+          </p>
+      </div>
+
+      <div class="c-demo__description">
+          <h3>Get a demo application</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
+            optio labore sint eius cumque odit numquam ipsam. Nesciunt, officiis
+            ipsam.
+          </p>
+      </div>
+
+      <div class="c-demo__description">
+          <h3>Get a demo application</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
+            optio labore sint eius cumque odit numquam ipsam. Nesciunt, officiis
+            ipsam.
+          </p>
+      </div>
+
+      <div class="c-demo__description">
+          <h3>Get a demo application</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
+            optio labore sint eius cumque odit numquam ipsam. Nesciunt, officiis
+            ipsam.
+          </p>
+      </div>
+
+      <div class="c-demo__description">
+          <h3>Get a demo application</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
+            optio labore sint eius cumque odit numquam ipsam. Nesciunt, officiis
+            ipsam.
+          </p>
+      </div>
+    </section>
   </body>
 </html>
