--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       </nav>
     </header>
     <!-- header/navbar -->
-    <section class="hero">
-      <div class="card card--get-a-demo container">
+    <section class="hero container">
+      <div class="card card--get-a-demo card--light-blue">
         <div class="c-demo__description">
           <h3>Get a demo application</h3>
           <p>
@@ -70,7 +70,7 @@
         </div>
       </div>
 
-      <div class="card card--get-a-demo container">
+      <div class="card card--light-blue c-card">
         <div class="c-demo__description">
           <h3>Get a demo application</h3>
           <p>
@@ -78,42 +78,40 @@
             optio labore sint eius cumque odit numquam ipsam. Nesciunt, officiis
             ipsam.
           </p>
+        </div>
       </div>
 
-      <div class="c-demo__description">
+      <div class="card card--light-blue">
+        <div class="c-demo__description">
           <h3>Get a demo application</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
             optio labore sint eius cumque odit numquam ipsam. Nesciunt, officiis
             ipsam.
           </p>
+        </div>
       </div>
 
-      <div class="c-demo__description">
+      <div class="card card--light-blue">
+        <div class="c-demo__description">
           <h3>Get a demo application</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
             optio labore sint eius cumque odit numquam ipsam. Nesciunt, officiis
             ipsam.
           </p>
+        </div>
       </div>
 
-      <div class="c-demo__description">
+      <div class="card card--light-blue">
+        <div class="c-demo__description">
           <h3>Get a demo application</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
             optio labore sint eius cumque odit numquam ipsam. Nesciunt, officiis
             ipsam.
           </p>
-      </div>
-
-      <div class="c-demo__description">
-          <h3>Get a demo application</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
-            optio labore sint eius cumque odit numquam ipsam. Nesciunt, officiis
-            ipsam.
-          </p>
+        </div>
       </div>
     </section>
   </body>
