--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
       <div class="card card--light-blue c-card">
         <div class="c-demo__description">
+          <i class="demo-desc__icon fa-regular fa-file-code"></i>
           <h3>Get a demo application</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
@@ -81,8 +82,9 @@
         </div>
       </div>
 
-      <div class="card card--light-blue">
+      <div class="card card--light-blue c-card">
         <div class="c-demo__description">
+          <i class="demo-desc__icon fa-solid fa-compass-drafting"></i>
           <h3>Get a demo application</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
@@ -92,8 +94,9 @@
         </div>
       </div>
 
-      <div class="card card--light-blue">
+      <div class="card card--light-blue c-card">
         <div class="c-demo__description">
+          <i class="demo-desc__icon fa-solid fa-laptop-code"></i>
           <h3>Get a demo application</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
@@ -103,8 +106,9 @@
         </div>
       </div>
 
-      <div class="card card--light-blue">
+      <div class="card card--light-blue c-card">
         <div class="c-demo__description">
+          <i class="demo-desc__icon fa-solid fa-bullhorn"></i>
           <h3>Get a demo application</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
@@ -112,6 +116,29 @@
             ipsam.
           </p>
         </div>
+      </div>
+    </section>
+    <!-- Fine hero -->
+
+    <section class="planning container">
+      <div class="planning__head">
+        <img src="/img/planning1.png" alt="" />
+        <h3>Strategic Planning</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas fuga
+          eaque, ratione minima adipisci similique saepe est facere maxime
+          tempore nam explicabo assumenda provident maiores fugiat nesciunt
+          pariatur alias iure.
+        </p>
+      </div>
+      <div class="card">
+        <img src="/img/planning2.png" alt="" />
+        <h4>App Develoment</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati,
+          cupiditate? Voluptatem harum perspiciatis eveniet ad?
+        </p>
+        <i class="fa-solid fa-arrow-down"></i>
       </div>
     </section>
   </body>
