--- a/index.html
+++ b/index.html
@@ -141,5 +141,63 @@
         <i class="fa-solid fa-arrow-down"></i>
       </div>
     </section>
+    <!-- Fine planning -->
+
+    <section class="testimonials container">
+      <div class="testimonials__header">
+        <h5>TESTIMONIALS</h5>
+        <h4>We are committed expert partners</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Id,
+          voluptatem! Aut, fuga unde. Voluptas quos dolor modi, pariatur
+          molestiae harum.
+        </p>
+      </div>
+      <div class="card card--purple">
+        <div class="testimonials__img-box">
+          <img class="testimonials__img" src="/img/testimonial1.jpg" alt="" />
+        </div>
+
+        <blockquote class="testimonials__blockquote">
+          <q class="testimonials__quote">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Necessitatibus a voluptas reprehenderit dignissimos dicta iure
+            deleniti ratione illum ipsa ipsum?
+          </q>
+          <p>NAT REYNOLDS</p>
+        </blockquote>
+      </div>
+
+      <div class="card card--purple">
+        <div class="testimonials__img-box">
+          <img class="testimonials__img" src="/img/testimonial2.jpg" alt="" />
+        </div>
+
+        <blockquote class="testimonials__blockquote">
+          <q class="testimonials__quote">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Necessitatibus a voluptas reprehenderit dignissimos dicta iure
+            deleniti ratione illum ipsa ipsum?
+          </q>
+          <p>CELIA ALMEDA</p>
+        </blockquote>
+      </div>
+
+      <div class="card card--purple">
+        <div class="testimonials__img-box">
+          <img class="testimonials__img" src="/img/testimonial3.jpg" alt="" />
+        </div>
+
+        <blockquote class="testimonials__blockquote">
+          <q class="testimonials__quote">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Necessitatibus a voluptas reprehenderit dignissimos dicta iure
+            deleniti ratione illum ipsa ipsum?
+          </q>
+          <p>BOB ROBERTS</p>
+        </blockquote>
+      </div>
+    </section>
+    <!-- Fine testimonials -->
   </body>
 </html>
