--- a/index.html
+++ b/index.html
@@ -199,5 +199,80 @@
       </div>
     </section>
     <!-- Fine testimonials -->
+
+    <section class="benefits">
+      <div class="container">
+        <h4>Benefits of working with us</h4>
+        <div class="benefits__row">
+          <div class="card">
+            <p class="benefits-card__number">01</p>
+            <h5 class="benefits-card__title">High Quality</h5>
+            <p class="benefits-card__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Assumenda architecto voluptatum ad expedita pariatur ipsum odio
+              voluptatibus porro quo deleniti?
+            </p>
+            <a class="button button--purple" href="#">more</a>
+          </div>
+
+          <div class="card">
+            <p class="benefits-card__number">02</p>
+            <h5 class="benefits-card__title">High Quality</h5>
+            <p class="benefits-card__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Assumenda architecto voluptatum ad expedita pariatur ipsum odio
+              voluptatibus porro quo deleniti?
+            </p>
+            <a class="button button--purple" href="#">more</a>
+          </div>
+
+          <div class="card">
+            <p class="benefits-card__number">03</p>
+            <h5 class="benefits-card__title">High Quality</h5>
+            <p class="benefits-card__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Assumenda architecto voluptatum ad expedita pariatur ipsum odio
+              voluptatibus porro quo deleniti?
+            </p>
+            <a class="button button--purple" href="#">more</a>
+          </div>
+
+          <div class="card">
+            <p class="benefits-card__number">04</p>
+            <h5 class="benefits-card__title">High Quality</h5>
+            <p class="benefits-card__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Assumenda architecto voluptatum ad expedita pariatur ipsum odio
+              voluptatibus porro quo deleniti?
+            </p>
+            <a class="button button--purple" href="#">more</a>
+          </div>
+
+          <div class="card">
+            <p class="benefits-card__number">05</p>
+            <h5 class="benefits-card__title">High Quality</h5>
+            <p class="benefits-card__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Assumenda architecto voluptatum ad expedita pariatur ipsum odio
+              voluptatibus porro quo deleniti?
+            </p>
+            <a class="button button--purple" href="#">more</a>
+          </div>
+
+          <div class="card">
+            <p class="benefits-card__number">06</p>
+            <h5 class="benefits-card__title">High Quality</h5>
+            <p class="benefits-card__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Assumenda architecto voluptatum ad expedita pariatur ipsum odio
+              voluptatibus porro quo deleniti?
+            </p>
+            <a class="button button--purple" href="#">more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Fine benefits -->
   </body>
 </html>
