sezione about-us completata

--- a/index.html
+++ b/index.html
@@ -272,7 +272,41 @@
         </div>
       </div>
     </section>
-
     <!-- Fine benefits -->
+
+    <section class="about-us container">
+      <div class="about-us__head">
+        <h3>About Us</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias dicta
+          magni dolor facere eum, nulla, consectetur, quod molestiae repellat
+          laborum ut dolores ratione voluptate id sed. Suscipit repellendus
+          maxime dolore accusamus laborum distinctio nam velit alias dolores
+          illo ducimus eos dolor nobis magni ratione nemo, provident minima
+          aliquid error atque!
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi
+          numquam repudiandae ratione consequatur reprehenderit. Impedit dolores
+          pariatur animi voluptates rerum unde dolorum repudiandae, sit
+          molestias. Nihil, commodi inventore adipisci dicta earum dolor fuga
+          iste excepturi minima minus! Aut, quod maiores!
+        </p>
+      </div>
+
+      <div class="about-us__body">
+        <div class="about-us__img-box">
+          <img class="testimonials__img" src="/img/about.jpg" alt="" />
+          <i class="about-us__quotes fa-solid fa-quote-left"></i>
+        </div>
+        <h4>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
+          labore!
+        </h4>
+        <a class="button button--purple" href="#"
+          ><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a
+        >
+      </div>
+    </section>
   </body>
 </html>
