sezione get-started completata

--- a/index.html
+++ b/index.html
@@ -308,5 +308,26 @@
         >
       </div>
     </section>
+    <!-- Fine about-us -->
+
+    <section class="get-started">
+      <div class="container">
+        <h5 class="get-started__subtitle">GET STARTED</h5>
+        <h4 class="get-started__title">Simple, Transparent Pricing</h4>
+        <p class="get-started__its-free">It's Free!</p>
+        <p class="get-started__description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+          rerum quis similique dolorum aliquam quod aliquid at tenetur fugit
+          provident!
+        </p>
+        <a class="button" href="#">Get Started</a>
+        <br />
+        <p class="get-started__copyright">
+          Copyright 2022 Boolean - Classe LXX -
+        </p>
+
+        <a class="get-started__privacy-policy" href="#">Privacy Policy</a>
+      </div>
+    </section>
   </body>
 </html>
