Pare che abbia finito, Mauro

--- a/index.html
+++ b/index.html
@@ -329,5 +329,18 @@
         <a class="get-started__privacy-policy" href="#">Privacy Policy</a>
       </div>
     </section>
+    <!-- Fine get-started -->
+
+    <footer>
+      <div class="container">
+        <p class="footer__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores dolor
+          laudantium tempora, facere sint aut!
+        </p>
+        <a href="#">Lorem ipsum</a>
+        <p class="footer__stupid-text">Lorem, ipsum dolor.</p>
+        <a href="#">Boolean careers</a>
+      </div>
+    </footer>
   </body>
 </html>
