pulizia codice (eliminate regole ridondanti) e fix

--- a/index.html
+++ b/index.html
@@ -120,25 +120,27 @@
     </section>
     <!-- Fine hero -->
 
-    <section class="planning container">
-      <div class="planning__head">
-        <img src="/img/planning1.png" alt="" />
-        <h3>Strategic Planning</h3>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas fuga
-          eaque, ratione minima adipisci similique saepe est facere maxime
-          tempore nam explicabo assumenda provident maiores fugiat nesciunt
-          pariatur alias iure.
-        </p>
-      </div>
-      <div class="card">
-        <img src="/img/planning2.png" alt="" />
-        <h4>App Develoment</h4>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati,
-          cupiditate? Voluptatem harum perspiciatis eveniet ad?
-        </p>
-        <i class="fa-solid fa-arrow-down"></i>
+    <section class="planning">
+      <div class="container">
+        <div class="planning__head">
+          <img src="/img/planning1.png" alt="" />
+          <h3>Strategic Planning</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas fuga
+            eaque, ratione minima adipisci similique saepe est facere maxime
+            tempore nam explicabo assumenda provident maiores fugiat nesciunt
+            pariatur alias iure.
+          </p>
+        </div>
+        <div class="card">
+          <img src="/img/planning2.png" alt="" />
+          <h4>App Develoment</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati,
+            cupiditate? Voluptatem harum perspiciatis eveniet ad?
+          </p>
+          <i class="fa-solid fa-arrow-down"></i>
+        </div>
       </div>
     </section>
     <!-- Fine planning -->
@@ -154,9 +156,7 @@
         </p>
       </div>
       <div class="card card--purple">
-        <div class="testimonials__img-box">
-          <img class="testimonials__img" src="/img/testimonial1.jpg" alt="" />
-        </div>
+        <img class="testimonials__img" src="/img/testimonial1.jpg" alt="" />
 
         <blockquote class="testimonials__blockquote">
           <q class="testimonials__quote">
@@ -169,9 +169,7 @@
       </div>
 
       <div class="card card--purple">
-        <div class="testimonials__img-box">
-          <img class="testimonials__img" src="/img/testimonial2.jpg" alt="" />
-        </div>
+        <img class="testimonials__img" src="/img/testimonial2.jpg" alt="" />
 
         <blockquote class="testimonials__blockquote">
           <q class="testimonials__quote">
@@ -184,9 +182,7 @@
       </div>
 
       <div class="card card--purple">
-        <div class="testimonials__img-box">
-          <img class="testimonials__img" src="/img/testimonial3.jpg" alt="" />
-        </div>
+        <img class="testimonials__img" src="/img/testimonial3.jpg" alt="" />
 
         <blockquote class="testimonials__blockquote">
           <q class="testimonials__quote">
@@ -338,7 +334,7 @@
           laudantium tempora, facere sint aut!
         </p>
         <a href="#">Lorem ipsum</a>
-        <p class="footer__stupid-text">Lorem, ipsum dolor.</p>
+        <span>Lorem, ipsum dolor.</span>
         <a href="#">Boolean careers</a>
       </div>
     </footer>
